xine-lib (1-beta6)
  * inform the width and height for the v4l input plugin

xine-lib (1-beta5)
  * new AV sync strategy (audio resample) for DXR3 users
  * improved fb driver with zero copy
  * fix the v4l plugin for lower resolution devices (webcam)
  * nvtv bugfixes
  * network code bugfixes (again long wait for some streams)
  * fix flac content detection (caused trouble to other demuxers)
  * OSS driver fixes (for cards using GETOPTR sync method)
  * fixed gnome-vfs plugin to be used for remote locations (other than http)
  * at least for DVD input, the language reporting is now channel-aware
  * CD-ROM/XA ADPCM decoder
  * QT demuxer fixes to select among multiple A/V traks and support 
    non- and poorly-interleaved files 
  * support for the css title key cache in the latest versions of a well
    known css decryption library
  * allow to crop the dxr3 overlay area to help users who see green lines
    at the top or bottom of the dxr3 overlay image
  * fixed discontinuity detection bug in MPEG block demuxer
    (this might fix occasional - or, in case of "Dances with Wolves" RC2,
    enduring - audio stutters in DVD playback)
  * win32 loader bugfixes (most notably indeo, quicktime and wmv9)
  * FFT post plugin improvements
  * 'Qclp' Qualcomm PureVoice audio decoing via Quicktime DLL
  * libdvdnav updated to 0.1.5: miscellaneous fixes
  * HuffYUV video decoding via ffmpeg
  * vidixfb vo driver for vidix overlay on linux frame buffer
  * video processing api race condition fixes and other updates
  * make number of video buffer configurable by the user
    (performance tuning option)

xine-lib (1-beta4)
  * http input fixes
  * rtsp input fixes (remove long wait on end of stream)
  * build fixes
  * support for reference streams (.asx, .ram)

xine-lib (1-beta3)
  * PSX STR file demuxer
  * Westwood Studios AUD demuxer
  * PVA file demuxer
  * VOX file demuxer
  * NSF file demuxer
  * raw AC3 file demuxer