@@ -1,6 +1,7 @@
 xine-lib (1-beta6)
   * inform the width and height for the v4l input plugin
-
+  * ffmpeg aspect ratio detection code fixed
+	
 xine-lib (1-beta5)
   * new AV sync strategy (audio resample) for DXR3 users
   * improved fb driver with zero copy
